syntax = "proto3";

package second.protos;
import "second/protos/losses.proto";
import "second/protos/box_coder.proto";
import "second/protos/target.proto";
import "second/protos/voxel_generator.proto";

message VoxelNet {
  VoxelGenerator voxel_generator = 1;
  message VoxelFeatureExtractor {
    string module_class_name = 1;
    repeated int32 num_filters = 2;
    bool with_distance = 3;
    int32 num_input_features = 4;
  }
  VoxelFeatureExtractor voxel_feature_extractor = 2;
  message MiddleFeatureExtractor {
    string module_class_name = 1;
    repeated int32 num_filters_down1 = 2;
    repeated int32 num_filters_down2 = 3;
    int32 num_input_features = 4;
    int32 downsample_factor = 5;
  }
  MiddleFeatureExtractor middle_feature_extractor = 3;
  message RPN {
    string module_class_name = 1;
    repeated int32 layer_nums = 2;
    repeated int32 layer_strides = 3;
    repeated int32 num_filters = 4;
    repeated int32 upsample_strides = 5;
    repeated int32 num_upsample_filters = 6;
    bool use_groupnorm = 7;
    int32 num_groups = 8;
    int32 num_input_features = 9;
  }
  RPN rpn = 4;
  uint32 num_point_features = 5;
  bool use_sigmoid_score = 6;
  Loss loss = 7;
  bool encode_rad_error_by_sin = 8;
  bool encode_background_as_zeros = 9;
  bool use_rotate_nms = 10;
  bool use_multi_class_nms = 11;
  int32 nms_pre_max_size = 12;
  int32 nms_post_max_size = 13;
  float nms_score_threshold = 14;
  float nms_iou_threshold = 15;
  bool use_direction_classifier = 16;
  float direction_loss_weight = 17;
  float pos_class_weight = 18;
  float neg_class_weight = 19;
  enum LossNormType {
    NormByNumExamples = 0;
    NormByNumPositives = 1;
    NormByNumPosNeg = 2;
    DontNorm = 3;
  }
  LossNormType loss_norm_type = 20;
  BoxCoder box_coder = 21;
  TargetAssigner target_assigner = 22;

  // deprecated in future

  bool lidar_input = 23;
  
  bool use_aux_classifier = 24;
  bool encode_angle_to_vector = 25;
  bool without_reflectivity = 26;
  bool use_bev = 27;
  repeated float post_center_limit_range = 28;
  
}