syntax = "proto3";

package second.protos;

message VoxelGenerator{
    repeated float voxel_size = 1;
    repeated float point_cloud_range = 2;
    uint32 max_number_of_points_per_voxel = 3;
}
